# astroparse

./: .readthedocs.yaml  README.md  main.py  parse_table.py  pyproject.toml
astroparse/: __init__.py  defaults.py  parse.py  reader.py
docs/: requirements.txt
docs/source/: conf.py  defaults.rst  index.rst  parse_file.rst  reader.rst
examples/: ex_dicts.py  ex_file.py  ex_lists.py  ex_reader.py
src/: __init__.py
src/astroparse/: defaults.py  reader.py
tests/: ex_dicts.py  ex_file.py  ex_lists.py  ex_reader.py
tests/test_data/: 0.08M_history.data
