[build-system]
requires = ["setuptools", "astropy"]
build-backend = "setuptools.build_meta"

[project]
name = "astroparse"
version = "1.0.0"
authors = [
    { name = "Anthony Atkinson", email = "asa15@rice.edu" }
]
description = "Flexible parsing utility for irregular text data tables."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
license = "GPL-3.0-only"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/asatk/astroparse"
Issues = "https://github.com/asatk/astroparse/issues"